# shinobi-arena-rl

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: minimax.md  rl_model.md  rl_model_ideas.md  rl_model_inputs.md  rl_plan_naruto_arena.md  rules.md  rules_v0.md
naruto_arena/: __init__.py
naruto_arena/agents/: __init__.py  heuristic_agent.py  minimax_agent.py  random_agent.py  rl_agent.py
naruto_arena/characters/: characters_index.json
naruto_arena/characters/characters_json/: abumi-zaku.json  aburame-shino-(s).json  aburame-shino.json  aburame-torune-(s).json  akadou-yoroi.json  akatsuchi-(s).json  akimichi-chouji-(s).json  akimichi-chouji.json  akimichi-chouza-(s).json  animal-path-pein-(s).json  ao-(s).json  asura-path-pein-(s).json  baki.json  chiyo-(s).json  chojuro-(s).json  (+185 more)
naruto_arena/data/: __init__.py  characters.py  json_characters.py
naruto_arena/engine/: __init__.py  actions.py  chakra.py  characters.py  effects.py  rules.py  simulator.py  skills.py  state.py
naruto_arena/rl/: __init__.py  action_space.py  belief.py  env.py  model.py  observation.py  teams.py
notebooks/: colab_rl_training.ipynb
scripts/: compare_rl_models.py  evaluate_rl_benchmarks.py  rl_match_json_to_txt.py  simulate_minimax_battle.py  simulate_random_battle.py  simulate_rl_match.py  tournament_minimax.py  tournament_rl.py  train_rl_pytorch.py  train_transformer_curriculum.sh
tests/: test_chakra.py  test_engine.py  test_hinata.py  test_kiba.py  test_naruto.py  test_rl_components.py  test_rl_training.py  test_sakura.py  test_sasuke.py  test_shino.py
