[project]
name = "naruto-arena"
version = "0.1.0"
description = "Deterministic turn-based battle simulator inspired by Naruto Arena."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]
rl = [
    "numpy>=1.26",
    "torch>=2.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["naruto_arena"]

[tool.coverage.run]
branch = true
source = ["naruto_arena"]

[tool.coverage.report]
show_missing = true
skip_covered = true
